1.0.1
Fixed setting wrong window property whene dragging window to nex/prev desktop.
Fixed telling root window to change desktops.
Stacking fixes.
Temp removed scale resize.
Done stacking transient windows.
Non-themed window borders can now be translucent.
Now uses full 32b truecolour windows for transparency,
Correctly set _NET_CLIENT_LIST_STACKING/_NET_CLIENT_LIST.
Better stacking.
More fixes for undecorated/popup windows.
Fixes for undecorated windows.
Done withdraw window.
Minor window positioning fixes.
Minor window type fixes.
Position fixes for badly placed windows.
Added "restartwm" to messages.
Fixes for apps using those god awful client side decorations.

1.0.0
Minor gui fixes.
Fixed frame extents prop.
Made frame move more responsive.
Added _NET_FRAME_EXTENTS prop to windodows.
Fixed visual glitch when not using theme.
Fixed startup with no extant windows.
Fixed stacking.
Fixed changing themes.
Fixed reload modifier keys.
Done dragging window off left/right edge of screen changes current desktop.
Fixed 'ESC+MOVEKEYS' getting wrong key.
Fixed 'above/Below' fom window menu button.
Added 'ESC+MOVEKEYS' to un-fullscreen, ( MOVEKEYS are mod keys to be used, set in lfswm2Class.h, to be moved to prefs ).
Fixed hide controls in fullscreen.
Fixed maximize to correct monitor.
Done swtich desktops via scroll wheel.
Fixed flicker when window first opens.
If prop "_NET_CURRENT_DESKTOP" is available on startup select that desktop.
Fixed getting bottom bar size from prefs.
Fixed window losing focus.
Added force dockwindows to top, bottom or set by app to prefs.
Fixed hole in titlebar when shaded.
Fixed dock windows being on top.
Minor menu gui fix.
Fixed segfault with certain windows like xephyr.
Version bump.

0.2.6
Fixed restacking.
Code clean.
Fixed control position/sizes when changing themes on the fly.
Fixed segfault when switching resize modes.
Added "reloadtheme" to messaging.
Fixed positioning of wm menu popup.