@@ -210,50 +210,13 @@ bool LFSWM2_windowClass::LFSWM2_createClient(Window id,hintsDataStruct premaphs)
 					return(false);
 				}
 
-//			if(this->LFSWM2_getWindowType(id)==UNKNOWNTYPE)
-//				fprintf(stderr,"id=0x%x\n",id);
-//				{
-//					Atom	xa;
-//	Atom	xa_prop[1];
-//
-//	xa=XInternAtom(this->mainClass->display,"_NET_WM_WINDOW_TYPE",False);
-//	xa_prop[0]=this->mainClass->atomshashed.at(this->mainClass->prefs.LFSTK_hashFromKey("_NET_WM_WINDOW_TYPE_NORMAL"));
-//
-//	if(xa!=None)
-//		XChangeProperty(this->mainClass->display,id,xa,XA_ATOM,32,PropModeReplace,(unsigned char *)&xa_prop,1);
-//cc->windowType=NORMALWINDOW;
-////					cc->canMaximize=false;
-////					cc->canMinimize=false;
-////					cc->canResize=false;
-////					cc->canClose=false;
-////					if(cc->windowHints.sh->flags==0)
-////						{
-////							cc->canMaximize=true;
-////							cc->canMinimize=true;
-////							cc->canResize=true;
-////							cc->canClose=true;
-////							cc->isBorderless=false;
-//////						}
-//////					else if((cc->windowHints.sh->max_width==0) || (cc->windowHints.sh->max_height==0))
-//////						{
-//////							cc->canMaximize=true;
-//////							cc->canMinimize=true;
-//////							cc->canResize=true;
-//////							cc->canClose=true;
-//////						}
-//				}
-
-
-
-
-
+			//if(this->LFSWM2_getWindowType(id)==UNKNOWNTYPE)
+			//	fprintf(stderr,"id=0x%x\n",id);
 
 			cc=new LFSWM2_clientClass(this->mainClass,id);
 			cc->isBorderless=noborder;
 			cc->windowHints=premaphs;
 			cc->renderFrame(true,premaphs.pt.x,premaphs.pt.y);
-
-
 
 			if((this->LFSWM2_getWindowType(id)==NORMALWINDOW) )
 				{
@@ -263,20 +226,37 @@ bool LFSWM2_windowClass::LFSWM2_createClient(Window id,hintsDataStruct premaphs)
 					cc->canClose=true;
 				}
 
-//fprintf(stderr,"premaphs.mHints=%p\n",premaphs.mHints);
 			if(premaphs.mHints!=NULL)
 				{
-					//cc->isBorderless=false;
+					//this->mainClass->DEBUG_printMWMHints(premaphs.mHints);
 					cc->canMaximize=false;
 					cc->canMinimize=false;
 					cc->canClose=false;
 
-				//fprintf(stderr,">>>>premaphs.mHints->functions & MWM_FUNC_CLOSE=%x MWM_FUNC_CLOSE=%x\n",premaphs.mHints->functions,MWM_FUNC_CLOSE);//TODO//
-					cc->canClose=(premaphs.mHints->functions & MWM_FUNC_CLOSE);
-					//cc->canClose=(premaphs.mHints->decorations & MWM_FUNC_CLOSE);
-					cc->canMaximize=(premaphs.mHints->decorations & MWM_DECOR_MAXIMIZE);
-					cc->canMinimize=(premaphs.mHints->decorations & MWM_DECOR_MINIMIZE);
-					cc->canResize=(premaphs.mHints->decorations & MWM_DECOR_RESIZEH);
+					if((premaphs.mHints->flags & MWM_HINTS_FUNCTIONS)==MWM_HINTS_FUNCTIONS)
+						{
+							cc->canClose=(premaphs.mHints->functions & MWM_FUNC_CLOSE);
+							cc->canMaximize=(premaphs.mHints->decorations & MWM_DECOR_MAXIMIZE);
+							cc->canMinimize=(premaphs.mHints->decorations & MWM_DECOR_MINIMIZE);
+							cc->canResize=(premaphs.mHints->decorations & MWM_DECOR_RESIZEH);
+						}
+					else if((premaphs.mHints->flags & MWM_HINTS_DECORATIONS)==MWM_HINTS_DECORATIONS)
+						{
+							if((premaphs.mHints->decorations & MWM_DECOR_ALL)==MWM_DECOR_ALL)
+								{
+									cc->canMaximize=true;
+									cc->canMinimize=true;
+									cc->canResize=true;
+									cc->canClose=true;
+								}
+							else
+								{
+									cc->canClose=(premaphs.mHints->functions & MWM_FUNC_CLOSE);
+									cc->canMaximize=(premaphs.mHints->decorations & MWM_DECOR_MAXIMIZE);
+									cc->canMinimize=(premaphs.mHints->decorations & MWM_DECOR_MINIMIZE);
+									cc->canResize=(premaphs.mHints->decorations & MWM_DECOR_RESIZEH);
+								}
+						}
 				}
 
 			allowed=(Atom*)this->LFSWM2_getProp(id,this->mainClass->atomshashed.at(this->mainClass->prefs.LFSTK_hashFromKey("_NET_WM_ALLOWED_ACTIONS")),XA_ATOM,&nitems_return);
