@@ -1,4 +1,5 @@
 1.0.1
+Better motif hints detection.
 Fixed setting wrong window property whene dragging window to nex/prev desktop.
 Fixed telling root window to change desktops.
 Stacking fixes.
